--- a/playground/index.html
+++ b/playground/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/gh/JerryI/wljs-interpreter@dev/src/core.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/gh/JerryI/wljs-cells@dev/src/module.js"></script>
     <script type="module" src="./../dist/kernel.js"></script>
+    <script type="module" src="./../src/boxes.js"></script>
 </head>
 <body style="padding: 5rem">
     <script type="module">
